# triplclust

./: CMakeLists.txt
demo/: CMakeLists.txt  open3d_wrapper.cpp
src/: option.cpp  option.h  output.cpp  pointcloud.cpp  pointcloud.h
src/open3d_wrapper/: CMakeLists.txt  triplclust_wrapper.cpp  triplclust_wrapper.h
